
* docutils/parsers/null.py: Added to project; a do-nothing parser.

* docutils/parsers/rst/__init__.py:

  - Added validator to tab_width setting, with test.  Closes SF bug
    #1212515, report from Wu Wei.

* docutils/parsers/rst/states.py:

  - Fixed bug with escaped colons indicating a literal block.
  - Fixed bug with enumerated lists (SF#1254145).

* docutils/parsers/rst/directives/misc.py:

  - Added the "default-role" and "title" directives.
  - Added standard data file syntax to the "include" directive.
  - Added support for "class" directive content.

* docutils/parsers/rst/directives/images.py:

  - Added support for image width and height units.
  - Fixed bug with image "target" options.

* docutils/parsers/rst/include/: Directory added to project; contains
  standard data files for the "include" directive.  Initial contents:
  character entity substitution definition sets.

* docutils/readers/__init__.py:

  - Added universal.Decorations and universal.ExposeInternals
    transforms as default transforms for all readers.
  - Added ``ReReader`` base class for readers that reread an existing
    document tree.

* docutils/readers/doctree.py: Added to project; a reader for existing
  document trees.

* docutils/transforms/misc.py:

  - Added misc.Transitions transform, extracted from
    universal.FinalChecks.

* docutils/transforms/references.py:

  - Added references.DanglingReferences transform, extracted from
    universal.FinalChecks.

* docutils/transforms/universal.py:

  - Added universal.ExposeInternals transform, extracted from
    universal.FinalChecks.
  - Removed universal.FinalChecks transform (logic has been moved to
    several new transforms).
  - Fixed bug with the "expose_internals" setting and Text nodes
    (exposed by the "rawsource" internal attribute).

* docutils/transforms/writer_aux.py: Added to project; auxiliary
  transforms for writers.

  - Added ``Compound`` transform, which flattens compound paragraphs.
